// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withVariant navigating to page with variant should not redirect 1`] = `
<h1>
  This is the BBC.
</h1>
`;

exports[`withVariant navigating to page without variant service (serbian) with default variant should redirect to /serbian/lat 1`] = `
<p>
  You are going to 
  /serbian/lat
</p>
`;

exports[`withVariant navigating to page without variant service (serbian) with preferred variant should redirect to /serbian/cyr 1`] = `
<p>
  You are going to 
  /serbian/lat
</p>
`;

exports[`withVariant navigating to page without variant service (ukchina) with default variant should redirect to /ukchina/trad 1`] = `
<p>
  You are going to 
  /ukchina/lat
</p>
`;

exports[`withVariant navigating to page without variant service (zhongwen) with default variant should redirect to /zhongwen/trad 1`] = `
<p>
  You are going to 
  /zhongwen/lat
</p>
`;

exports[`withVariant navigating to page without variant service with no default variant should not redirect 1`] = `
<h1>
  This is the BBC.
</h1>
`;
